[package]
name = "dogehouse-rs"
description = "API Wrapper for Dogegarden's API v1."
authors = [ "Tom van Dijk <18gatenmaker6@gmail.com>" ]
version = "0.0.1"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
futures = "0.3.14"
reqwest = { version = "0.11.3" }
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["rt", "macros"] }
