[package]
name = "dogehouse-api"
description = "API Wrapper for Dogegarden's API v1"
authors = [ "Tom van Dijk <18gatenmaker6@gmail.com>" ]
homepage = "https://api.dogegarden.net"
documentation = "https://docs.rs/dogehouse_api/"
readme = "README.md"
repository = "https://github.com/dtomvan/dogehouse-api/"
license = "Unlicense"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["rt", "macros"] }
